# app/Http/Requests/Api/Cryptogram/UpdateCryptogram.php
@@ -45,7 +45,6 @@ class UpdateCryptogram extends FormRequest
             'solution_id' => ['required', 'integer', 'exists:solutions,id'],
             'date' => ['nullable', 'date'],
             'date_around' => ['nullable', 'string'],
-            'before_crist' => ['required', 'boolean'],
             'images' => ['nullable', 'array'],
             'groups' => ['nullable', 'json'],
             'tags' => ['nullable', 'array'],
@@ -108,10 +107,6 @@ class UpdateCryptogram extends FormRequest
             'solution_id' => [
                 'description' => 'The ID of Solution',
             ],
-            'before_crist' => [
-                'description' => 'Before crist',
-                'example' => 1,
-            ],
             'continent' => [
                 'description' => 'Continent',
                 'example' => 'Europe',
@@ -142,7 +137,7 @@ class UpdateCryptogram extends FormRequest
 
         $sanitized['image_url'] = 'temporary value';
 
-        $sanitized['language_id'] = $sanitized['language'] ? Language::firstOrCreate(['name' => $sanitized['language']])->id : null;
+        $sanitized['language_id'] = $sanitized['language_id'] ? $sanitized['language_id'] : null;
 
         $sanitized['sender_id'] = $sanitized['sender'] ? Person::firstOrCreate(['name' => $sanitized['sender']])->id : Person::firstOrCreate(['name' => 'Unknown'])->id;
         $sanitized['recipient_id'] = $sanitized['recipient'] ? Person::firstOrCreate(['name' => $sanitized['recipient']])->id : Person::firstOrCreate(['name' => 'Unknown'])->id;
